--- a/react-playground/src/index.css
+++ b/react-playground/src/index.css
@@ -13,3 +13,12 @@
     border-radius: 20px;
     background: #fff;
 }
+
+.action-button {
+    margin: 10px;
+}
+
+.toolbar {
+    background: #aaa;
+    padding: 5px;
+}
